--- a/Plants/plants_prep.ipynb
+++ b/Plants/plants_prep.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 411,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 414,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 415,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 416,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 418,
    "metadata": {},
    "outputs": [
     {
@@ -574,11 +574,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 419,
    "metadata": {},
    "outputs": [],
    "source": [
-    "obs_has_species.loc[obs_has_species['species'] == 'Impatiens capensis', 'native'] = True"
+    "obs_has_species.loc[obs_has_species['species'] == 'Impatiens capensis', 'native'] = True\n",
+    "obs_has_species.loc[obs_has_species['species'] == 'Pinus strobus', 'native'] = True"
    ]
   },
   {
@@ -590,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 420,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 421,
    "metadata": {},
    "outputs": [],
    "source": [
